# Nephelite

./: Cargo.toml  Dockerfile  Nephelite.sln  README.md
.github/: dependabot.yml
.github/workflows/: docker.yaml  release.yaml
Nephelite/: Dockerfile  GlobalUsings.cs  Nephelite.csproj  Nephelite.sln  Program.cs  appsettings.json
Nephelite/Configuration/: NepheliteConfiguration.cs
Nephelite/Controllers/: AuthorizationController.cs  DiscoveryController.cs  KeysController.cs  RegistrationController.cs  TokenController.cs  UserInfoController.cs
Nephelite/CustomResources/: CustomResource.cs  V1Client.cs  V1User.cs
Nephelite/Helm/: Chart.yaml  values.yaml
Nephelite/Helm/templates/: configmap.yaml  deployment.yaml  serviceaccount.yaml
Nephelite/Model/: OpenIdProviderMetadata.cs  SucessfulTokenResponse.cs
Nephelite/Model/Internal/: AuthorizationSessionInformation.cs  KeyMaterial.cs  RegistrationSessionInformation.cs
Nephelite/Model/OpenId/: AuthorizationRequest.cs  ErrorTokenResponse.cs  OpenIdProviderMetadata.cs  SuccessfulTokenResponse.cs  TokenRequest.cs
Nephelite/Nephelite/: GlobalUsings.cs  Nephelite.csproj  Program.cs  appsettings.json
Nephelite/Nephelite/Configuration/: ClientConfiguration.cs  PublicKeyCredentialsConfiguration.cs
Nephelite/Nephelite/Controllers/: AuthorizationController.cs  DiscoveryController.cs  JwksController.cs  RegistrationController.cs  TokenController.cs  WebAuthenticationController.cs  WebAuthnController.cs
Nephelite/Nephelite/CustomResources/: CustomResource.cs  V1ClientSpec.cs  V1PublicKeyCredential.cs  V1PublicKeyCredentialSpec.cs  V1User.cs
Nephelite/Nephelite/Helm/: values.yaml
Nephelite/Nephelite/Helm/templates/: NOTES.txt  _helpers.tpl  crd.yaml  demo.yaml  deployment.yaml  ingress.yaml
Nephelite/Nephelite/Model/: AuthorizationRequest.cs  AuthorizationSessionInformation.cs  ErrorTokenResponse.cs  OpenIdProviderMetadata.cs  RegistrationSessionInformation.cs  SessionInformation.cs  TokenRequest.cs
Nephelite/Nephelite/Properties/: launchSettings.json
Nephelite/Nephelite/Services/: KeyService.cs  KubernetesService.cs
Nephelite/Nephelite/wwwroot/: index.html  webauthn.js
Nephelite/Nephelite/wwwroot/css/: style.css
Nephelite/Properties/: launchSettings.json
Nephelite/Services/: KeyService.cs  KubernetesService.cs
Nephelite/wwwroot/js/: script.js
charts/nephelite/: values.yaml
charts/nephelite/templates/: crd.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
src/: crdgen.rs  lib.rs  main.rs
src/html/: register.html
src/trust/: yubico.der
(+1 files in other folders)
