[package]
name = "nephelite"
version = "0.1.0"
edition = "2021"

[lib]
name = "nephelite_lib"
path = "src/lib.rs"

[[bin]]
doc = false
name = "nephelite"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "client", "derive"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde_json = "1.0.140"
serde_yaml = "0.9.25"
