[package]
name = "nephelite"
version = "0.1.0"
edition = "2021"
default-run = "nephelite"

[lib]
name = "nephelite_lib"
path = "src/lib.rs"

[[bin]]
doc = false
name = "nephelite"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
cose-rust = "0.1.7"
hex = "0.4.3"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "client", "derive"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.140"
serde_yaml = "0.9.25"
sha2 = "0.10.9"
tokio = { version = "1.0", features = ["full"] }
tower-sessions = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
x509-parser = { version = "0.17.0", features = ["verify"] }
